INTYGFV-15128: Refactored QuestionPatientensArbetsformogaBedoms so that it only added input to value list if it has content.